Small fix of build.xml.
git-svn-id: http://infoscoop-gadgets.googlecode.com/svn/trunk@15 02c5044a-ceae-11de-b393-33af5e5426e5

--- a/infoscoop-gadgets/build.xml
+++ b/infoscoop-gadgets/build.xml
@@ -15,7 +15,7 @@
 	
 	<!-- zip infoscoop war file to temporary directory -->
 	<target name="dist" depends="prepare" description="zip gadgets">
-		<zip basedir="${basedir}/gadgets" destfile="${basedir}/dist/infoscoop-gadgets-${version}.zip">
+		<zip basedir="${basedir}/gadgets/" destfile="${basedir}/dist/infoscoop-gadgets-${version}.zip">
 			<exclude name="svn/*"/>
 		</zip>
 	</target>
