change the version to 1.0.2
git-svn-id: http://infoscoop-gadgets.googlecode.com/svn/trunk@17 02c5044a-ceae-11de-b393-33af5e5426e5

--- a/infoscoop-gadgets/build.xml
+++ b/infoscoop-gadgets/build.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="archive gadgets for infoscoop" default="dist" basedir=".">
 	<property name="app.name" value="infoScoop Gadgets" />
-	<property name="version" value="1.0" />
+	<property name="version" value="1.0.2" />
 	
 	<!-- remove distribution directory -->
 	<target name="clean" description="Delete old build directory">
-		<delete dir="${dist.home}" />
+		<delete dir="${basedir}/dist" />
 	</target>
 	
 	<!-- make distoribution directory -->
