--- a/infoscoop-gadgets/build.xml
+++ b/infoscoop-gadgets/build.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="archive gadgets for infoscoop" default="dist" basedir=".">
 	<property name="app.name" value="infoScoop Gadgets" />
-	<property name="version" value="1.0.6" />
+	<property name="version" value="1.0.7" />
 	
+	<path id="project.classpath">
+		<fileset dir="${basedir}/lib/build">
+			<include name="**/*.jar"/>
+		</fileset>
+	</path> 
+	
+	<taskdef resource="net/sf/antcontrib/antlib.xml" classpathref="project.classpath" />	
+
 	<!-- remove distribution directory -->
 	<target name="clean" description="Delete old build directory">
 		<delete dir="${basedir}/dist" />
@@ -11,13 +19,35 @@
 	<!-- make distoribution directory -->
 	<target name="prepare" depends="clean">
 		<mkdir dir="${basedir}/dist" />
+		<mkdir dir="${basedir}/dist/gadget_files" />
 	</target>
 	
 	<!-- zip infoscoop war file to temporary directory -->
 	<target name="dist" depends="prepare" description="zip gadgets">
+		<antcall target="compress"/>
+		
 		<zip basedir="${basedir}/gadgets/" destfile="${basedir}/dist/infoscoop-gadgets-${version}.zip">
 			<exclude name="svn/*"/>
 		</zip>
 	</target>
 	
+	<!-- compress each gadget directory -->
+	<target name="compress" depends="prepare" description="zip gadget directories">
+		<foreach target="getdirname" param="gadget.dirname">
+			<path>
+				<dirset dir="${basedir}/gadgets">
+					<include name="*"/>
+				</dirset>
+			</path>
+		</foreach>
+	</target>
+	
+	<!-- get directory name -->
+	<target name="getdirname">
+		<echo message="${gadget.dirname}"/>
+		<propertyregex property="zip.target.name" input="${gadget.dirname}" regexp="([^/]+)$" select="\0" casesensitive="false" />
+		<zip basedir="${basedir}/gadgets/${zip.target.name}" destfile="${basedir}/dist/gadget_files/${zip.target.name}.zip">
+			<exclude name="svn/*"/>
+		</zip>
+	</target>
 </project>
